D8-141 page alignment fix
Fixing the distance between the start of the pages and the nav bar

--- a/styles/account_Styles/CreateAccountStyles.module.css
+++ b/styles/account_Styles/CreateAccountStyles.module.css
@@ -4,6 +4,7 @@
 	align-items: center;
 	justify-content: center;
 	min-height: 60vh;
+	margin-top: 50px;
   
 }
 
